--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </section>
 
       <!-- Replace this div with a second section tag to indicate this is a separate portion of content-->
-      <div>
+      <section>
 
         <!-- Wrap the nested video content below with figure tags -->
         <div>
@@ -49,7 +49,7 @@
           <!-- Wrap this text in a figcaption tag so that it captions the video above-->
           <span>Exceptional Promotional Video - Source: archive.org</span>
         </div>
-      </div>
+      </section>
 
       <!-- Replace this div with a third section tag -->
       <div>
