--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </section>
 
       <!-- Replace this div with a third section tag -->
-      <div>
+      <section>
           <h3>Links</h3>
           <p>
             <a href="#" target="_blank">Home Restoration</a><br>
@@ -66,7 +66,7 @@
             <a href="#" target="_blank">Facebook</a><br>
             <a href="#" target="_blank">Twitter</a>
           </p>
-      </div>
+      </section>
     </main>
     <!-- End of main part of webpage -->
 
